--- a/juegos.html
+++ b/juegos.html
@@ -5,10 +5,10 @@
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8" />
     <meta name ="author" content ="Sergio Truébano Robles" />
-    <meta name ="description" content ="Información personal sobre el autor de la página Web" />
-    <meta name ="keywords" content ="aquí cada documento debe tener la lista de las palabras clave del mismo separadas por comas" />
+    <meta name ="description" content ="Juego Sudoku" />
+    <meta name ="keywords" content ="juego,sudoku" />
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
-    <title>Escritorio Virtual - Sobre mi</title>
+    <title>Escritorio Virtual - Juegos</title>
 
     <!-- añadir el elemento link de enlace a la hoja de estilo dentro del <head> del documento html -->
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
@@ -29,13 +29,21 @@
             <a href="meteorologia.html" title="Meteorología" accesskey="M" tabindex="5">Meteorología</a>
             <a href="viajes.html" title="Viajes" accesskey="V" tabindex="6">Viajes</a>
             <a href="juegos.html" title="Juegos" accesskey="J" tabindex="7">Juegos</a>
-           
         </nav>
-
+    </header>
+   
+    <header>
+        <h2>Menú de juegos</h2>
+        <nav>
+            <a href="memoria.html" title="Juego de memoria" accesskey="U" tabindex="8">Juego de memoria</a>
+            <a href="sudoku.html" title="Sudoku" accesskey="D" tabindex="9">Sudoku</a> 
+        </nav>
     </header>
 
-    <!-- Datos con el contenidos que aparece en el navegador -->
-    <p>En desarrollo</p>
+    <main>
+        <h2>Sudoku</h2>
+            <p>Puede divertirse seleccionando uno de los juegos disponibles</p>
+    </main>
 
 </body>
 </html>
