--- a/sobremi.html
+++ b/sobremi.html
@@ -36,7 +36,7 @@
     </header>
     
     <!-- Datos con el contenidos que aparece en la sección principal -->
-    <!--<main> : Todavía no tiene sentido porque no sabemos el contexto del sitio web que diferencia esta parte del resto de partes del sitio web-->
+    <main>
         <h2>Sobre mi</h2>
             <section>
                 <h3>Datos personales</h3>
@@ -144,7 +144,7 @@
                             <dd>Principales características de los lenguajes de programación, así como distintos paradigmas: procedimientos, orientado a objetos, funcional</dd>
                     </dl>
             </section>
-    <!--</main>-->
+    </main>
     <aside>
         <h2>Tabla de temperaturas</h2>
             <p>La siguiente tabla expresa la media de las temperaturas (en grados Celsius) en Gijón durante los últimos 10 años:</p>
