--- a/agenda.html
+++ b/agenda.html
@@ -8,7 +8,7 @@
     <meta name ="description" content ="Información personal sobre el autor de la página Web" />
     <meta name ="keywords" content ="aquí cada documento debe tener la lista de las palabras clave del mismo separadas por comas" />
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
-    <title>Escritorio Virtual - Sobre mi</title>
+    <title>Escritorio Virtual - Agenda</title>
 
     <!-- añadir el elemento link de enlace a la hoja de estilo dentro del <head> del documento html -->
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
