Auto play quitado (estaba por prueba de examen)

--- a/sobremi.html
+++ b/sobremi.html
@@ -92,7 +92,7 @@
 
                     <p>A continuación, se muestra un vídeo del Rally Princesa de Asturias 2023:</p>
 
-                        <video autoplay controls preload tabindex="10">
+                        <video controls preload tabindex="10">
                             <source src="multimedia/videos/rally.mp4" type="video/mp4">
                             <source src="multimedia/videos/rally.webm" type="video/webm">
                         </video>
