--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8" />
     <meta name ="author" content ="Sergio Truébano Robles" />
-    <meta name ="description" content ="Información personal sobre el autor de la página Web" />
-    <meta name ="keywords" content ="aquí cada documento debe tener la lista de las palabras clave del mismo separadas por comas" />
+    <meta name ="description" content ="Índice de la página Web" />
+    <meta name ="keywords" content ="index, escritorio virtual" />
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
     <title>Escritorio Virtual - Índice</title>
 
@@ -14,6 +14,10 @@
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
     <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
     <link rel="icon" href="multimedia/imagenes/favicon.ico" />
+
+    <!-- link de enlace a javascript y jquery -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="js/fondo.js"></script>
 </head>
 
 <body>
@@ -35,7 +39,11 @@
     </header>
 
     <!-- Datos con el contenidos que aparece en el navegador -->
-    <p>En desarrollo</p>
+    <script>
+        const fondo = new Fondo("Brunei", "Begawan", {latitud : 4.535277, 
+                                                      longitud : 114.727669});
+        fondo.setFondo();
+    </script>
 
 </body>
 </html>
