--- a/juegos.html
+++ b/juegos.html
@@ -5,8 +5,8 @@
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8" />
     <meta name ="author" content ="Sergio Truébano Robles" />
-    <meta name ="description" content ="Juego Sudoku" />
-    <meta name ="keywords" content ="juego,sudoku" />
+    <meta name ="description" content ="Juegos interactivos" />
+    <meta name ="keywords" content ="juego,sudoku,memoria,crucigrama" />
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
     <title>Escritorio Virtual - Juegos</title>
 
@@ -37,11 +37,12 @@
         <nav>
             <a href="memoria.html" title="Juego de memoria" accesskey="U" tabindex="8">Juego de memoria</a>
             <a href="sudoku.html" title="Sudoku" accesskey="D" tabindex="9">Sudoku</a> 
+            <a href="crucigrama.html" title="Crucigrama" accesskey="C" tabindex="10">Crucigrama</a>
         </nav>
     </header>
 
     <main>
-        <h2>Sudoku</h2>
+        <h2>Juegos</h2>
             <p>Puede divertirse seleccionando uno de los juegos disponibles</p>
     </main>
 
