--- a/memoria.html
+++ b/memoria.html
@@ -40,16 +40,15 @@
         <nav>
             <a href="memoria.html" title="Juego de memoria" accesskey="U" tabindex="8">Juego de memoria</a>
             <a href="sudoku.html" title="Sudoku" accesskey="D" tabindex="9">Sudoku</a> 
+            <a href="crucigrama.html" title="Crucigrama" accesskey="C" tabindex="10">Crucigrama</a>
         </nav>
     </header>
 
     <main>  
         <h2>Juego de memoria</h2>
-        <div id="memoria">
-            <script>
-                new Memoria();
-            </script>
-        </div>
+        <script>
+            new Memoria();
+        </script>
     </main>
 
 
