--- a/sudoku.html
+++ b/sudoku.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name ="author" content ="Sergio Truébano Robles" />
     <meta name ="description" content ="Juegos interactivos" />
-    <meta name ="keywords" content ="juego,memoria,sudoku" />
+    <meta name ="keywords" content ="juego,sudoku" />
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
     <title>Escritorio Virtual - Juegos</title>
 
@@ -40,6 +40,7 @@
         <nav>
             <a href="memoria.html" title="Juego de memoria" accesskey="U" tabindex="8">Juego de memoria</a>
             <a href="sudoku.html" title="Sudoku" accesskey="D" tabindex="9">Sudoku</a> 
+            <a href="crucigrama.html" title="Crucigrama" accesskey="C" tabindex="10">Crucigrama</a>
         </nav>
     </header>
     <main> 
