--- a/crucigrama.html
+++ b/crucigrama.html
@@ -39,14 +39,15 @@
 
     </header>
 
-    <header>
+    <section data-element="menu">
         <h2>Menú de juegos</h2>
         <nav>
             <a href="memoria.html" title="Juego de memoria" accesskey="U" tabindex="8">Juego de memoria</a>
             <a href="sudoku.html" title="Sudoku" accesskey="D" tabindex="9">Sudoku</a> 
-            <a href="crucigrama.html" title="Crucigrama" accesskey="C" tabindex="10">Crucigrama</a>
+            <a href="crucigrama.html" title="Crucigrama" accesskey="C" tabindex="10">Crucigrama matemático</a>
+            <a href="api.html" title="Reproductor" accesskey="R" tabindex="11">Reproductor de música</a>
         </nav>
-    </header>
+    </section>
     
     <!-- Datos con el contenidos que aparece en el navegador -->
     <main>
