--- a/sudoku.html
+++ b/sudoku.html
@@ -35,14 +35,16 @@
         </nav>
     </header>
    
-    <header>
+    <section data-element="menu">
         <h2>Menú de juegos</h2>
         <nav>
             <a href="memoria.html" title="Juego de memoria" accesskey="U" tabindex="8">Juego de memoria</a>
             <a href="sudoku.html" title="Sudoku" accesskey="D" tabindex="9">Sudoku</a> 
-            <a href="crucigrama.html" title="Crucigrama" accesskey="C" tabindex="10">Crucigrama</a>
+            <a href="crucigrama.html" title="Crucigrama" accesskey="C" tabindex="10">Crucigrama matemático</a>
+            <a href="api.html" title="Reproductor" accesskey="R" tabindex="11">Reproductor de música</a>
         </nav>
-    </header>
+    </section>
+    
     <main> 
         <h2>Sudoku</h2> 
         <script>
