--- a/viajes.html
+++ b/viajes.html
@@ -50,7 +50,7 @@
         <h2>Viajes</h2>
 
         <section data-element="xml">
-            <h3>Mostrar el contenido de archivos XML locales</h3>
+            <h3>Rutas</h3>
             <p>
                 <label for="xml-in">Selecciona un archivo XML para mostrar su contenido:</label>
                 <input id="xml-in" type="file" onchange="viajes.parseInputFile(this.files);" title="Seleccionador de archivo XML">
@@ -58,7 +58,7 @@
         </section>
 
         <section data-element="kml">
-            <h3>Mostrar el contenido de varios archivos KML locales</h3>
+            <h3>Planimetrías</h3>
             <p>
                 <label for="kml-in">Selecciona varios archivos KML para mostrar su contenido:</label>
                 <input id="kml-in" type="file" onchange="viajes.parseInputKmlFiles(this.files);" title="Seleccionador de archivos KML" multiple>
@@ -66,7 +66,7 @@
         </section>
 
         <section data-element="svg">
-            <h3>Mostrar el contenido de varios archivos SVG locales</h3>
+            <h3>Altimetrías</h3>
             <p>
                 <label for="svg-in">Selecciona varios archivos SVG para mostrar su contenido:</label>
                 <input id="svg-in" type="file" onchange="viajes.parseInputSvgFiles(this.files);" title="Seleccionador de archivos KML" multiple>
