--- a/api.html
+++ b/api.html
@@ -42,7 +42,7 @@
         <nav>
             <a href="memoria.html" title="Juego de memoria" accesskey="U" tabindex="8">Juego de memoria</a>
             <a href="sudoku.html" title="Sudoku" accesskey="D" tabindex="9">Sudoku</a> 
-            <a href="crucigrama.html" title="Crucigrama" accesskey="C" tabindex="10">Crucigrama matemático</a>
+            <a href="php/crucigrama.php" title="Crucigrama" accesskey="C" tabindex="10">Crucigrama matemático</a>
             <a href="api.html" title="Reproductor MP3" accesskey="R" tabindex="11">Reproductor de música</a>
         </nav>
     </section>
@@ -51,10 +51,12 @@
     <main>
         <h2>Reproductor de música</h2>
         <input type="file" multiple>
-        <section data-element="DnD"> <p>Arrastre y suelte archivos de música aquí</p> </section>
+        <section data-element="DnD"> 
+            <h3>Añadir nuevas canciones a la playlist</h3>
+            <p>Arrastre y suelte archivos de música aquí</p>
+        </section>
         <section data-element="playlist">
             <h3>Playlist de música</h3>
-            <ul></ul>
         </section>
         <audio controls></audio>
     </main>
