--- a/juegos.html
+++ b/juegos.html
@@ -37,7 +37,7 @@
         <nav>
             <a href="memoria.html" title="Juego de memoria" accesskey="U" tabindex="8">Juego de memoria</a>
             <a href="sudoku.html" title="Sudoku" accesskey="D" tabindex="9">Sudoku</a> 
-            <a href="crucigrama.html" title="Crucigrama" accesskey="C" tabindex="10">Crucigrama matemático</a>
+            <a href="php/crucigrama.php" title="Crucigrama" accesskey="C" tabindex="10">Crucigrama matemático</a>
             <a href="api.html" title="Reproductor" accesskey="R" tabindex="11">Reproductor de música</a>
         </nav>
     </section>
