--- a/memoria.html
+++ b/memoria.html
@@ -1,27 +1,25 @@
 <!DOCTYPE HTML>
 
-<html lang="es">
-<head>
+<html lang="es"><head>
     <!-- Datos que describen el documento -->
-    <meta charset="UTF-8" />
-    <meta name ="author" content ="Sergio Truébano Robles" />
-    <meta name ="description" content ="Juego de memoria basado en realizar parejas de cartas" />
-    <meta name ="keywords" content ="juego,memoria" />
-    <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="author" content="Sergio Truébano Robles">
+    <meta name="description" content="Juego de memoria basado en realizar parejas de cartas">
+    <meta name="keywords" content="juego,memoria">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escritorio Virtual - Juego de memoria</title>
 
     <!-- añadir el elemento link de enlace a la hoja de estilo dentro del <head> del documento html -->
-    <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
-    <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
-    <link rel="stylesheet" type="text/css" href="estilo/memoria.css" />
-    <link rel="icon" href="multimedia/imagenes/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="estilo/estilo.css">
+    <link rel="stylesheet" type="text/css" href="estilo/layout.css">
+    <link rel="stylesheet" type="text/css" href="estilo/memoria.css">
+    <link rel="icon" href="multimedia/imagenes/favicon.ico">
 
     <script src="js/memoria.js"></script>
 </head>
 
 <body>
 
-    <!--Cabecera-->
     <header>
         <h1>Escritorio Virtual</h1>
         <nav>
@@ -30,7 +28,7 @@
             <a href="noticias.html" title="Noticias" accesskey="N" tabindex="3">Noticias</a>
             <a href="agenda.html" title="Agenda" accesskey="A" tabindex="4">Agenda</a>
             <a href="meteorologia.html" title="Meteorología" accesskey="M" tabindex="5">Meteorología</a>
-            <a href="viajes.html" title="Viajes" accesskey="V" tabindex="6">Viajes</a>
+            <a href="php/viajes.php" title="Viajes" accesskey="V" tabindex="6">Viajes</a>
             <a href="juegos.html" title="Juegos" accesskey="J" tabindex="7">Juegos</a>
         </nav>
     </header>
@@ -39,9 +37,10 @@
         <h2>Menú de juegos</h2>
         <nav>
             <a href="memoria.html" title="Juego de memoria" accesskey="U" tabindex="8">Juego de memoria</a>
-            <a href="sudoku.html" title="Sudoku" accesskey="D" tabindex="9">Sudoku</a> 
+            <a href="sudoku.html" title="Sudoku" accesskey="O" tabindex="9">Sudoku</a> 
             <a href="php/crucigrama.php" title="Crucigrama" accesskey="C" tabindex="10">Crucigrama matemático</a>
-            <a href="api.html" title="Reproductor" accesskey="R" tabindex="11">Reproductor de música</a>
+            <a href="api.html" title="Reproductor" accesskey="P" tabindex="11">Reproductor de música</a>
+            <a href="php/inventario.php" title="Inventario" accesskey="T" tabindex="12">Inventario de componentes</a>
         </nav>
     </section>
 
@@ -49,9 +48,9 @@
         <h2>Juego de memoria</h2>
         <script>
             new Memoria();
-        </script>
+        </script><article data-element="HTML5" data-state="init"><h3>Tarjeta de memoria</h3><img src="https://upload.wikimedia.org/wikipedia/commons/3/38/HTML5_Badge.svg" title="Tarjeta de juego de memoria" alt="HTML5"></article><article data-element="SVG" data-state="init"><h3>Tarjeta de memoria</h3><img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/SVG_Logo.svg" title="Tarjeta de juego de memoria" alt="SVG"></article><article data-element="JS" data-state="init"><h3>Tarjeta de memoria</h3><img src="https://upload.wikimedia.org/wikipedia/commons/b/ba/Javascript_badge.svg" title="Tarjeta de juego de memoria" alt="JS"></article><article data-element="W3C" data-state="init"><h3>Tarjeta de memoria</h3><img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/W3C_icon.svg" title="Tarjeta de juego de memoria" alt="W3C"></article><article data-element="CSS3" data-state="init"><h3>Tarjeta de memoria</h3><img src="https://upload.wikimedia.org/wikipedia/commons/6/62/CSS3_logo.svg" title="Tarjeta de juego de memoria" alt="CSS3"></article><article data-element="CSS3" data-state="init"><h3>Tarjeta de memoria</h3><img src="https://upload.wikimedia.org/wikipedia/commons/6/62/CSS3_logo.svg" title="Tarjeta de juego de memoria" alt="CSS3"></article><article data-element="SVG" data-state="init"><h3>Tarjeta de memoria</h3><img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/SVG_Logo.svg" title="Tarjeta de juego de memoria" alt="SVG"></article><article data-element="JS" data-state="init"><h3>Tarjeta de memoria</h3><img src="https://upload.wikimedia.org/wikipedia/commons/b/ba/Javascript_badge.svg" title="Tarjeta de juego de memoria" alt="JS"></article><article data-element="HTML5" data-state="init"><h3>Tarjeta de memoria</h3><img src="https://upload.wikimedia.org/wikipedia/commons/3/38/HTML5_Badge.svg" title="Tarjeta de juego de memoria" alt="HTML5"></article><article data-element="W3C" data-state="init"><h3>Tarjeta de memoria</h3><img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/W3C_icon.svg" title="Tarjeta de juego de memoria" alt="W3C"></article><article data-element="PHP" data-state="init"><h3>Tarjeta de memoria</h3><img src="https://upload.wikimedia.org/wikipedia/commons/2/27/PHP-logo.svg" title="Tarjeta de juego de memoria" alt="PHP"></article><article data-element="PHP" data-state="init"><h3>Tarjeta de memoria</h3><img src="https://upload.wikimedia.org/wikipedia/commons/2/27/PHP-logo.svg" title="Tarjeta de juego de memoria" alt="PHP"></article>
     </main>
 
 
-</body>
-</html>
+
+</body></html>  
