--- a/sobremi.html
+++ b/sobremi.html
@@ -18,8 +18,6 @@
 
 <body>
 
-    <!--Cabecera-->
-
     <header>
         <h1>Escritorio Virtual</h1>
         <nav>
@@ -28,14 +26,11 @@
             <a href="noticias.html" title="Noticias" accesskey="N" tabindex="3">Noticias</a>
             <a href="agenda.html" title="Agenda" accesskey="A" tabindex="4">Agenda</a>
             <a href="meteorologia.html" title="Meteorología" accesskey="M" tabindex="5">Meteorología</a>
-            <a href="viajes.html" title="Viajes" accesskey="V" tabindex="6">Viajes</a>
+            <a href="php/viajes.php" title="Viajes" accesskey="V" tabindex="6">Viajes</a>
             <a href="juegos.html" title="Juegos" accesskey="J" tabindex="7">Juegos</a>
-           
         </nav>
-
     </header>
     
-    <!-- Datos con el contenidos que aparece en la sección principal -->
     <main>
         <h2>Sobre mi</h2>
             <section>
