--- a/index.html
+++ b/index.html
@@ -1,28 +1,26 @@
 <!DOCTYPE HTML>
 
-<html lang="es">
-<head>
+<html lang="es"><head>
     <!-- Datos que describen el documento -->
-    <meta charset="UTF-8" />
-    <meta name ="author" content ="Sergio Truébano Robles" />
-    <meta name ="description" content ="Índice de la página Web" />
-    <meta name ="keywords" content ="index, escritorio virtual" />
-    <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="author" content="Sergio Truébano Robles">
+    <meta name="description" content="Índice de la página Web">
+    <meta name="keywords" content="index, escritorio virtual">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escritorio Virtual - Índice</title>
 
     <!-- añadir el elemento link de enlace a la hoja de estilo dentro del <head> del documento html -->
-    <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
-    <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
-    <link rel="icon" href="multimedia/imagenes/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="estilo/estilo.css">
+    <link rel="stylesheet" type="text/css" href="estilo/layout.css">
+    <link rel="icon" href="multimedia/imagenes/favicon.ico">
 
     <!-- link de enlace a javascript y jquery -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="js/fondo.js"></script>
 </head>
 
-<body>
+<body style="background-image: url(&quot;https://live.staticflickr.com/3506/3723383842_d5b8b6ca45_b.jpg&quot;); background-size: cover;">
 
-    <!--Cabecera-->
     <header>
         <h1>Escritorio Virtual</h1>
         <nav>
@@ -31,19 +29,9 @@
             <a href="noticias.html" title="Noticias" accesskey="N" tabindex="3">Noticias</a>
             <a href="agenda.html" title="Agenda" accesskey="A" tabindex="4">Agenda</a>
             <a href="meteorologia.html" title="Meteorología" accesskey="M" tabindex="5">Meteorología</a>
-            <a href="viajes.html" title="Viajes" accesskey="V" tabindex="6">Viajes</a>
+            <a href="php/viajes.php" title="Viajes" accesskey="V" tabindex="6">Viajes</a>
             <a href="juegos.html" title="Juegos" accesskey="J" tabindex="7">Juegos</a>
-           
         </nav>
-
     </header>
 
-    <!-- Datos con el contenidos que aparece en el navegador -->
-    <script>
-        const fondo = new Fondo("Brunei", "Begawan", {latitud : 4.535277, 
-                                                      longitud : 114.727669});
-        fondo.setFondo();
-    </script>
-
-</body>
-</html>
+</body></html>
