--- a/juegos.html
+++ b/juegos.html
@@ -1,24 +1,22 @@
 <!DOCTYPE HTML>
 
-<html lang="es">
-<head>
+<html lang="es"><head>
     <!-- Datos que describen el documento -->
-    <meta charset="UTF-8" />
-    <meta name ="author" content ="Sergio Truébano Robles" />
-    <meta name ="description" content ="Juegos interactivos" />
-    <meta name ="keywords" content ="juego,sudoku,memoria,crucigrama" />
-    <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="author" content="Sergio Truébano Robles">
+    <meta name="description" content="Juegos interactivos">
+    <meta name="keywords" content="juego,sudoku,memoria,crucigrama,reproductor,música,inventario,componentes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escritorio Virtual - Juegos</title>
 
     <!-- añadir el elemento link de enlace a la hoja de estilo dentro del <head> del documento html -->
-    <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
-    <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
-    <link rel="icon" href="multimedia/imagenes/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="estilo/estilo.css">
+    <link rel="stylesheet" type="text/css" href="estilo/layout.css">
+    <link rel="icon" href="multimedia/imagenes/favicon.ico">
 </head>
 
 <body>
 
-    <!--Cabecera-->
     <header>
         <h1>Escritorio Virtual</h1>
         <nav>
@@ -27,7 +25,7 @@
             <a href="noticias.html" title="Noticias" accesskey="N" tabindex="3">Noticias</a>
             <a href="agenda.html" title="Agenda" accesskey="A" tabindex="4">Agenda</a>
             <a href="meteorologia.html" title="Meteorología" accesskey="M" tabindex="5">Meteorología</a>
-            <a href="viajes.html" title="Viajes" accesskey="V" tabindex="6">Viajes</a>
+            <a href="php/viajes.php" title="Viajes" accesskey="V" tabindex="6">Viajes</a>
             <a href="juegos.html" title="Juegos" accesskey="J" tabindex="7">Juegos</a>
         </nav>
     </header>
@@ -36,9 +34,10 @@
         <h2>Menú de juegos</h2>
         <nav>
             <a href="memoria.html" title="Juego de memoria" accesskey="U" tabindex="8">Juego de memoria</a>
-            <a href="sudoku.html" title="Sudoku" accesskey="D" tabindex="9">Sudoku</a> 
+            <a href="sudoku.html" title="Sudoku" accesskey="O" tabindex="9">Sudoku</a> 
             <a href="php/crucigrama.php" title="Crucigrama" accesskey="C" tabindex="10">Crucigrama matemático</a>
-            <a href="api.html" title="Reproductor" accesskey="R" tabindex="11">Reproductor de música</a>
+            <a href="api.html" title="Reproductor" accesskey="P" tabindex="11">Reproductor de música</a>
+            <a href="php/inventario.php" title="Inventario" accesskey="T" tabindex="12">Inventario de componentes</a>
         </nav>
     </section>
 
@@ -47,5 +46,5 @@
             <p>Puede divertirse seleccionando uno de los juegos disponibles</p>
     </main>
 
-</body>
-</html>
+
+</body></html>
