--- a/sudoku.html
+++ b/sudoku.html
@@ -1,27 +1,25 @@
 <!DOCTYPE HTML>
 
-<html lang="es">
-<head>
+<html lang="es"><head>
     <!-- Datos que describen el documento -->
-    <meta charset="UTF-8" />
-    <meta name ="author" content ="Sergio Truébano Robles" />
-    <meta name ="description" content ="Juegos interactivos" />
-    <meta name ="keywords" content ="juego,sudoku" />
-    <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="author" content="Sergio Truébano Robles">
+    <meta name="description" content="Juegos interactivos">
+    <meta name="keywords" content="juego,sudoku">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escritorio Virtual - Juegos</title>
 
     <!-- añadir el elemento link de enlace a la hoja de estilo dentro del <head> del documento html -->
-    <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
-    <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
-    <link rel="stylesheet" type="text/css" href="estilo/sudoku.css" />
-    <link rel="icon" href="multimedia/imagenes/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="estilo/estilo.css">
+    <link rel="stylesheet" type="text/css" href="estilo/layout.css">
+    <link rel="stylesheet" type="text/css" href="estilo/sudoku.css">
+    <link rel="icon" href="multimedia/imagenes/favicon.ico">
 
     <script src="js/sudoku.js"></script>
 </head>
 
 <body>
 
-    <!--Cabecera-->
     <header>
         <h1>Escritorio Virtual</h1>
         <nav>
@@ -30,7 +28,7 @@
             <a href="noticias.html" title="Noticias" accesskey="N" tabindex="3">Noticias</a>
             <a href="agenda.html" title="Agenda" accesskey="A" tabindex="4">Agenda</a>
             <a href="meteorologia.html" title="Meteorología" accesskey="M" tabindex="5">Meteorología</a>
-            <a href="viajes.html" title="Viajes" accesskey="V" tabindex="6">Viajes</a>
+            <a href="php/viajes.php" title="Viajes" accesskey="V" tabindex="6">Viajes</a>
             <a href="juegos.html" title="Juegos" accesskey="J" tabindex="7">Juegos</a>
         </nav>
     </header>
@@ -39,9 +37,10 @@
         <h2>Menú de juegos</h2>
         <nav>
             <a href="memoria.html" title="Juego de memoria" accesskey="U" tabindex="8">Juego de memoria</a>
-            <a href="sudoku.html" title="Sudoku" accesskey="D" tabindex="9">Sudoku</a> 
+            <a href="sudoku.html" title="Sudoku" accesskey="O" tabindex="9">Sudoku</a> 
             <a href="php/crucigrama.php" title="Crucigrama" accesskey="C" tabindex="10">Crucigrama matemático</a>
-            <a href="api.html" title="Reproductor" accesskey="R" tabindex="11">Reproductor de música</a>
+            <a href="api.html" title="Reproductor" accesskey="P" tabindex="11">Reproductor de música</a>
+            <a href="php/inventario.php" title="Inventario" accesskey="T" tabindex="12">Inventario de componentes</a>
         </nav>
     </section>
     
@@ -59,8 +58,8 @@
                     }
                 }
             });
-        </script>
+        </script><p data-row="0" data-column="0" data-state="blocked">3</p><p data-row="0" data-column="1" data-state="correct">8</p><p data-row="0" data-column="2" data-state="blocked">4</p><p data-row="0" data-column="3" data-state="init"></p><p data-row="0" data-column="4" data-state="blocked">6</p><p data-row="0" data-column="5" data-state="blocked">9</p><p data-row="0" data-column="6" data-state="init"></p><p data-row="0" data-column="7" data-state="blocked">5</p><p data-row="0" data-column="8" data-state="init"></p><p data-row="1" data-column="0" data-state="init"></p><p data-row="1" data-column="1" data-state="init"></p><p data-row="1" data-column="2" data-state="init"></p><p data-row="1" data-column="3" data-state="blocked">2</p><p data-row="1" data-column="4" data-state="blocked">7</p><p data-row="1" data-column="5" data-state="init"></p><p data-row="1" data-column="6" data-state="init"></p><p data-row="1" data-column="7" data-state="init"></p><p data-row="1" data-column="8" data-state="blocked">4</p><p data-row="2" data-column="0" data-state="blocked">9</p><p data-row="2" data-column="1" data-state="init"></p><p data-row="2" data-column="2" data-state="blocked">2</p><p data-row="2" data-column="3" data-state="init"></p><p data-row="2" data-column="4" data-state="init"></p><p data-row="2" data-column="5" data-state="blocked">4</p><p data-row="2" data-column="6" data-state="init"></p><p data-row="2" data-column="7" data-state="init"></p><p data-row="2" data-column="8" data-state="init"></p><p data-row="3" data-column="0" data-state="init"></p><p data-row="3" data-column="1" data-state="blocked">2</p><p data-row="3" data-column="2" data-state="init"></p><p data-row="3" data-column="3" data-state="init"></p><p data-row="3" data-column="4" data-state="blocked">8</p><p data-row="3" data-column="5" data-state="blocked">5</p><p data-row="3" data-column="6" data-state="init"></p><p data-row="3" data-column="7" data-state="blocked">1</p><p data-row="3" data-column="8" data-state="blocked">9</p><p data-row="4" data-column="0" data-state="blocked">8</p><p data-row="4" data-column="1" data-state="init"></p><p data-row="4" data-column="2" data-state="blocked">9</p><p data-row="4" data-column="3" data-state="init"></p><p data-row="4" data-column="4" data-state="init"></p><p data-row="4" data-column="5" data-state="init"></p><p data-row="4" data-column="6" data-state="blocked">2</p><p data-row="4" data-column="7" data-state="init"></p><p data-row="4" data-column="8" data-state="blocked">5</p><p data-row="5" data-column="0" data-state="blocked">5</p><p data-row="5" data-column="1" data-state="blocked">1</p><p data-row="5" data-column="2" data-state="init"></p><p data-row="5" data-column="3" data-state="blocked">3</p><p data-row="5" data-column="4" data-state="blocked">9</p><p data-row="5" data-column="5" data-state="init"></p><p data-row="5" data-column="6" data-state="init"></p><p data-row="5" data-column="7" data-state="blocked">6</p><p data-row="5" data-column="8" data-state="init"></p><p data-row="6" data-column="0" data-state="init"></p><p data-row="6" data-column="1" data-state="init"></p><p data-row="6" data-column="2" data-state="init"></p><p data-row="6" data-column="3" data-state="blocked">8</p><p data-row="6" data-column="4" data-state="init"></p><p data-row="6" data-column="5" data-state="init"></p><p data-row="6" data-column="6" data-state="blocked">5</p><p data-row="6" data-column="7" data-state="init"></p><p data-row="6" data-column="8" data-state="blocked">3</p><p data-row="7" data-column="0" data-state="blocked">2</p><p data-row="7" data-column="1" data-state="init"></p><p data-row="7" data-column="2" data-state="init"></p><p data-row="7" data-column="3" data-state="init"></p><p data-row="7" data-column="4" data-state="blocked">4</p><p data-row="7" data-column="5" data-state="blocked">6</p><p data-row="7" data-column="6" data-state="init"></p><p data-row="7" data-column="7" data-state="init"></p><p data-row="7" data-column="8" data-state="init"></p><p data-row="8" data-column="0" data-state="init"></p><p data-row="8" data-column="1" data-state="blocked">4</p><p data-row="8" data-column="2" data-state="init"></p><p data-row="8" data-column="3" data-state="blocked">7</p><p data-row="8" data-column="4" data-state="blocked">5</p><p data-row="8" data-column="5" data-state="init"></p><p data-row="8" data-column="6" data-state="blocked">9</p><p data-row="8" data-column="7" data-state="init"></p><p data-row="8" data-column="8" data-state="blocked">6</p>
     </main>
 
-</body>
-</html>
+
+</body></html>
